# LIBMAT_FIRMWARE

./: .gitignore  .gitmodules  README.md  gitignore
IDFBase/IDF_PoC/PoC_Battery/main/: CMakeLists.txt  main.cpp
IDFBase/IDF_PoC/PoC_Battery/main/src/: CANHandler.cpp  CANHandler.h  LEDHandler.cpp  LEDHandler.h  definations.h
IDFBase/IDF_PoC/PoC_Battery/main/src/Commons/: Commons.cpp  Commons.h
IDFBase/IDF_PoC/PoC_Battery/main/src/I2CHandler/: I2CHandler.cpp  I2CHandler.h
IDFBase/IDF_PoC/PoC_Battery/main/src/Networking/BLE/: BLEHandler.cpp  BLEHandler.h
IDFBase/IDF_PoC/PoC_Battery/main/src/Networking/EC20/: EC20.cpp  EC20.h
IDFBase/IDF_PoC/PoC_Battery/main/src/Networking/MQTT/: MQTT.cpp  MQTT.h
IDFBase/IDF_PoC/PoC_Battery/main/src/Networking/NimBLE/: NimBLE.h
IDFBase/IDF_PoC/PoC_Battery/main/src/Networking/WS/: WS.cpp  WS.h
IDFBase/IDF_PoC/PoC_Battery/main/src/Networking/WiFi/: WiFi.cpp  WiFi.h
IDFBase/IDF_PoC/PoC_Battery/main/src/i2cAHT/: I2CHandler.cpp  I2CHandler.h
IDFBase/IDF_PoC/PoC_Hub/main/: CMakeLists.txt  main.cpp
IDFBase/IDF_PoC/PoC_Hub/main/src/: BatteryHandler.cpp  BatteryHandler.h  CANHandler.cpp  CANHandler.h  LEDHandler.cpp  LEDHandler.h  definations.h
IDFBase/IDF_PoC/PoC_Hub/main/src/Commons/: Commons.cpp  Commons.h
IDFBase/IDF_PoC/PoC_Hub/main/src/Networking/WS/: WS.cpp  WS.h
IDFBase/IDF_PoC/PoC_Hub/main/src/Networking/WiFi/: WiFi.h
IDFBase/Main/IDF_Main_Hub/main/: CMakeLists.txt  main.cpp
IDFBase/Main/IDF_Main_Hub/main/src/: definations.h
IDFBase/Main/IDF_Main_Hub/main/src/Wired/: CANHandler.cpp  CANHandler.h  GPIOHandler.cpp  GPIOHandler.h
IDFBase/Main/IDF_Main_Hub/main/src/Wireless/Telemetry/: EC20Handler.cpp  EC20Handler.h  TelemetryHandler.cpp  TelemetryHandler.h
IDFBase/Main/IDF_Main_Hub/main/src/Wireless/WiFi_Hub/: Websocket.cpp  Websocket.h  WiFiHub.cpp  WiFiHub.h
Server/: database.db  initDB.py  main.py  schema.sql
TTGO_ADC_Test/: TTGO_ADC_Test.ino
TTGO_BMS_Test/: BMSHandler.h  TTGO_BMS_Test.ino
TTGO_BSerial_Main/: BMSHandler.h  Definations.h  FileManager.h  GSMHandler.h  LEDHandler.h  PowerManagement.h  TTGO_BSerial_Main.ino  TelemetryScanner.h
TTGO_GSM_Test/: GSMHandler.h  TTGO_GSM_Test.ino
TTGO_Main/: TTGO_Main.ino  (+1 more)
(+178 files in other folders)
