idf_component_register(SRCS "main.cpp"
                            "src/Networking/BLE/BLEHandler.cpp"
                            "src/Networking/WiFi/WiFi.cpp"
                            "src/Commons/Commons.cpp"
                            "src/Networking/WS/WS.cpp"
                            "src/CANHandler.cpp"
                            "src/LEDHandler.cpp"
                            "src/Networking/EC20/EC20.cpp"
                            "src/I2CHandler/I2CHandler.cpp"
                    INCLUDE_DIRS "." "src")
