idf_component_register(SRCS "main.cpp"
                            "src/Networking/WiFi/WiFi.cpp"
                            "src/Commons/Commons.cpp"
                            "src/Networking/WS/WS.cpp"
                            "src/BatteryHandler.cpp"
                            "src/CANHandler.cpp"
                            "src/LEDHandler.cpp"
                    INCLUDE_DIRS ".")
